# binary-matrix-product

./: BMP.cpp  BMP.h  BMP_test.cpp  CMakeLists.txt  Makefile  build.sh
